# django-snacks

./: README.md  pyproject.toml
snacks/: tests.py  views.py
snacks/static/css/: style.css
snacks/templates/snacks/: about.html  home.html
snacks_project/: settings.py
templates/: base.html  footer.html  navbar.html
